Fix menu overlap in timeline

--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-    z-index: 250 !important;
+    z-index: 2500 !important;
 }
 
 .navbar-brand img {
